overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   font-family: sans-serif;
   color: #5a3e2b;
   font-family: "Quicksand";
@@ -94,7 +94,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  /* overflow: scroll; */
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
